--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-Catlab = "0.13, 0.14"
+Catlab = "^0.14.13"
 LabelledArrays = "^1"
 Requires = "^1"
 StatsBase = "^0.33"
